--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,20 @@
     <groupId>com.hczerpak.maven.plugins</groupId>
     <artifactId>raspberrypi-deploy-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-SNAPSHOT</version>
 
     <name>raspberrypi-deploy-maven-plugin Maven Mojo</name>
-    <!--<url>https://github.com/hczerpak/raspberrypi-deploy-maven-plugin</url>-->
+    <url>https://github.com/hczerpak/raspberrypi-deploy-maven-plugin</url>
+
+    <developers>
+        <developer>
+            <id>hczerpak</id>
+            <name>Hubert Czerpak</name>
+            <email>myFirstname D0t myLastname at gmail D0t com</email>
+            <url>http://github.com/hczerpak</url>
+            <timezone>+0</timezone>
+        </developer>
+    </developers>
 
     <build>
         <plugins>
@@ -48,12 +58,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-vfs2</artifactId>
-            <version>2.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>3.4</version>
@@ -61,9 +65,21 @@
         </dependency>
 
         <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.53</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
